--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -1464,17 +1464,17 @@ h1.setting-title p{line-height:26px;color:#666;}
 }
 .subscription-title{
     font-size: 13px;
-    color: #666;
-    height: 32px;
-    line-height: 32px;
+    color: #333;
+    height: 30px;
+    line-height: 30px;
     margin: 0;
     padding: 0 15px;
     text-align:center;
     background:#dee5e7;border-radius:2px 2px 0 0;
 
 }
-.subscription-title2{text-align:left;font-weight:bold;background:#fff;color:#333;height:42px;line-height:42px;}
-.sub-font{font-weight:bold;}
+.subscription-title2{margin-top:20px;}
+.sub-font{font-weight:bold;color:#999;margin-top:10px;display:block;}
 .plan-select{
     background: #2dcc70;
     font-size: 12px;
@@ -1500,6 +1500,7 @@ h1.setting-title p{line-height:26px;color:#666;}
 .table-out table td{
     padding: 12px 0;
     color:#666;
+    font-weight:bold;
 }
 .table-out table td:last-child{
     font-weight: 700;
@@ -2519,7 +2520,7 @@ table.md-table tbody.md-body > tr.md-row span {white-space: nowrap;}
 .icon-sort-down{position:relative;z-index:1;top:9px;right:22px;float:right;color:#666;}
 .url-tokens-row i{font-style:normal;color:#999;}
 md-table-container{max-height:430px;overflow-y:auto;border-radius:2px;border:1px solid #ececec;}
-.table-out-coupon{padding-top:0;}
+.table-out-coupon{padding-top:25px;}
 .table-out-coupon input{border-radius:2px 0 0 2px;border-right:none;}
 .table-out-coupon button{border-radius:0 2px 2px 0;}
 .md-button.md-default-theme.md-accent[disabled], .md-button.md-accent[disabled], .md-button.md-default-theme.md-fab[disabled], .md-button.md-fab[disabled], .md-button.md-default-theme.md-raised[disabled], .md-button.md-raised[disabled], .md-button.md-default-theme.md-warn[disabled], .md-button.md-warn[disabled], .md-button.md-default-theme[disabled], .md-button[disabled]{color:#fff;background:#ccc !important;}
