--- a/www.newbidder.com/css/style.css
+++ b/www.newbidder.com/css/style.css
@@ -387,13 +387,18 @@ input {outline: none;}
     animation-timing-function: ease;
     animation-fill-mode: both;
 }
+.w-md.free-green{background:#009800;border:none;}
+.w-md.free-green .pricedesc p{color:#fff;}
+.w-md.free-green .pricedesc-list{border-top:1px solid #029202}
+.w-md.free-green .pricedesc-list li{color:#fff;border-bottom:1px solid #029202}
+.free-green h2{font-size:38px;color:#fff;margin-top:15%;}
 .close{float:right;margin:-10px -18px 0 0;font-size:22px;font-weight:200;color:#bfbfbf;opacity:1.0;position:relative;z-index:1000;}
 .close:focus{outline:0;}
 .trk-img{display:none;}
 .trk-md-img{width:92%;margin:0 auto;}
 .compare-table h4{margin-bottom:20px;font-weight:600;font-size:18px;}
-.qq img{float:left;margin:4px 5px 0 0;}
-.qq{font-weight:bold;color:#333;}
+.list-01 .qq{float:left;margin:4px 5px 0 0;line-height:26px;background:url("../img/qq.png") no-repeat;background-size:100%;width:156px;text-align:right;color:#fff;}
+.list-01 .qq span{margin-right:8px;}
 #compare table{width:100%;overflow:hidden;}
 #compare td+td{border:1px solid #fff;}
 #compare td{padding:15px 10px;text-align:center;vertical-align:middle;color:#333;}
