--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -335,6 +335,9 @@ md-select.md-table-select > .md-select-value{
     height: 34px;
     border:none;
 }
+.cs-add-button:hover {
+  background: #2f9be1 !important;
+}
 .cs-input-label {
     line-height: 20px;
     margin-top: 8px;
@@ -658,9 +661,8 @@ table.md-table thead.md-head > tr.md-row{
     height: auto;
 }
 table.md-table td.md-cell{
-    border-bottom: 1px solid #eaeaea;
-    border-top: none;
-    font-size:12px;
+    border-top: 1px solid #eaeaea;
+    border-bottom: none;font-size:12px;
 }
 .md-table-pagination .label {
     font-size: 12px;
@@ -1090,10 +1092,13 @@ md-select.md-default-theme .md-select-value, md-select .md-select-value{
     width: 55px;
     height: 34px;
     line-height: 34px;
-    background: #2da8f9;
+    background: #2f9be1;
     cursor: pointer;
     margin-top:0;
     border-radius: 2px;
+}
+.view_column:hover {
+  background: #2da8f9;
 }
 .md-table-container{
     margin-top: 15px;
@@ -1390,7 +1395,7 @@ h1.setting-title p{line-height:26px;color:#666;}
     margin-right: 5px;
 }
 .save-btn,.close-btn{
-    background: #2da8f9;
+    background: #2f9be1;
     padding: 0 10px;
     font-size: 13px;
     color: #fff;
@@ -1431,12 +1436,11 @@ h1.setting-title p{line-height:26px;color:#666;}
     line-height: 32px;
     text-transform: lowercase;
     padding: 0 10px;
-    background:#2da8f9;
+    background:#2f9be1;
     color: #fff;
-    margin:0;
 }
 .md-raised.copy-btn.verify-btn{
-    background: #29af69;
+    background: #2f9be1;
 }
 .md-raised.copy-btn.verify-btn:hover{
     background:#29af69 !important;
@@ -1448,8 +1452,8 @@ h1.setting-title p{line-height:26px;color:#666;}
 .md-raised.copy-btn.verify-btn.domain-error:hover{
     background: rgba(255, 0, 0, 0.62) !important;
 }
-.md-raised.copy-btn:hover{
-    background: #2f9be1 !important;
+.md-raised.copy-btn:hover, .add-another-btn:hover {
+    background: #2da8f9 !important;
 }
 .table thead{
     font-size: 12px;
@@ -1464,18 +1468,15 @@ h1.setting-title p{line-height:26px;color:#666;}
     border-top: none;
 }
 .subscription-title{
-    font-size: 13px;
-    color: #333;
-    height: 30px;
-    line-height: 30px;
+    font-size: 14px;
+    color: #999;
+    height: 39px;
+    line-height: 39px;
     margin: 0;
-    padding: 0 15px;
+    padding: 0 10px;
     text-align:center;
-    background:#dee5e7;border-radius:2px 2px 0 0;
 
 }
-.subscription-title2{margin-top:20px;}
-.sub-font{font-weight:bold;color:#999;margin-top:10px;display:block;}
 .plan-select{
     background: #2dcc70;
     font-size: 12px;
@@ -1491,7 +1492,7 @@ h1.setting-title p{line-height:26px;color:#666;}
     visibility: inherit;
 }
 .table-out{
-    padding:15px;
+    padding:20px 35px;
     background: #fff;
     border-radius:3px;
 }
@@ -1500,16 +1501,13 @@ h1.setting-title p{line-height:26px;color:#666;}
 }
 .table-out table td{
     padding: 12px 0;
-    color:#666;
-    font-weight:bold;
 }
 .table-out table td:last-child{
     font-weight: 700;
     text-align: right;
-    color:#333;
 }
 .pro{
-    margin:15px 0 25px 0;
+    margin:10px 0;
 }
 .pro span,
 .pro span.pro-price{
@@ -1583,7 +1581,7 @@ h1.setting-title p{line-height:26px;color:#666;}
     background: #8992aa !important;
 }
 .copy-btn.domain-btn{
-    background: #425fa5;border-radius:2px;
+    background: #2f9be1;border-radius:2px;
 }
 .copy-btn.domain-btn.main-domain{
     background: #2f9be1 !important;
@@ -1592,7 +1590,7 @@ h1.setting-title p{line-height:26px;color:#666;}
     background: #2f9be1 !important;
 }
 .copy-btn.domain-btn:hover{
-    background:#425fa5!important;
+    background:#2da8f9!important;
 }
 .copy-btn.main-domain{
     padding: 0 15px;
@@ -2521,10 +2519,6 @@ table.md-table tbody.md-body > tr.md-row span {white-space: nowrap;}
 .icon-sort-down{position:relative;z-index:1;top:9px;right:22px;float:right;color:#666;}
 .url-tokens-row i{font-style:normal;color:#999;}
 md-table-container{max-height:430px;overflow-y:auto;border-radius:2px;border:1px solid #ececec;}
-.table-out-coupon{padding-top:25px;}
-.table-out-coupon input{border-radius:2px 0 0 2px;border-right:none;}
-.table-out-coupon button{border-radius:0 2px 2px 0;}
-.md-button.md-default-theme.md-accent[disabled], .md-button.md-accent[disabled], .md-button.md-default-theme.md-fab[disabled], .md-button.md-fab[disabled], .md-button.md-default-theme.md-raised[disabled], .md-button.md-raised[disabled], .md-button.md-default-theme.md-warn[disabled], .md-button.md-warn[disabled], .md-button.md-default-theme[disabled], .md-button[disabled]{color:#fff;background:#ccc !important;}
 .referral-group{margin:40px 0;}
 .referral-group .control-label{text-align:right;}
 select{border:1px solid #d5dce4;}
@@ -2586,6 +2580,7 @@ md-select-menu.md-default-theme md-option[selected], md-select-menu md-option[se
 md-select-menu.md-default-theme md-option[selected]:hover, md-select-menu md-option[selected]:hover,md-select-menu md-option[selected]:focus{background:#d5dce4;color:#333;}
 md-select.md-table-select > .md-select-value{border-bottom:1px solid #d5dce4 !important;}
 table.md-table thead.md-head > tr.md-row{height: auto;}
+table.md-table td.md-cell{border-top:1px solid #eaeaea;border-bottom:none;}
 table.md-table tbody.md-body > tr.md-row, table.md-table tfoot.md-foot > tr.md-row{height:38px;}
 md-option{height:36px;background:#f6f6f6;}
 md-option:hover{background:#e6ebf0;}
@@ -2631,9 +2626,6 @@ md-dialog md-dialog-content.botblack-height{overflow:initial;}
     .fade-in-right-big{width:50%;}
     .item-domains .input-out{width:50%;}
     .another-list-btn{margin-top:15px;}
-    .sign-up-success .sign-up-detail .col-sm-6{width:100%;}
-    .sign-up-success .sign-up-detail .col-sm-5{width:100%;}
-    .sign-up-success .sign-up-detail .col-sm-offset-1{margin-left:0;}
 }
 @media (max-width:910px){
     .profile-content{width:96%;}
@@ -2675,29 +2667,4 @@ md-dialog md-dialog-content.botblack-height{overflow:initial;}
     .navbar-right > li > a{width:100px;}
     .md-toolbar-tools h1, .md-toolbar-tools h2, .md-toolbar-tools h3{font-weight:bold;font-size:16px;}
     .cs-subform-select{width:91px;}
-}
-.sign-up-success {
-    width:85%;
-    margin:0 auto;
-  padding:40px 0;
-}
-.sign-up-success > h3{color:#0055bf;font-weight:bold;}
-.sign-up-success > h3, .sign-up-success > p, .sign-up-success .btn-box {
-  text-align: center;
-}
-.sign-up-success > p {
-  margin-bottom:50px;
-}
-.sign-up-success .btn-box .md-button {
-    margin-top:20px;
-  padding:2px 22px;
-    border-radius:2px;text-transform : capitalize;font-size:14px;
-}
-.sign-up-success .sign-up-detail .i-box {
-  font-size: 26px;
-  text-align: center;
-  color: #ccc;
-}
-.sign-up-success .sign-up-detail {
-  margin-bottom: 25px;
 }
