--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -2066,6 +2066,8 @@ input[type="checkbox"].th-checkbox{
 .weight-num{
     display: inline-block;
     float: right;
+    height: 35px;
+    line-height: 35px;
 }
 .weight-num em{font-size:12px; color:#666;font-style:normal;margin-left:5px;}
 .add-box{
