--- a/www.newbidder.com/css/style.css
+++ b/www.newbidder.com/css/style.css
@@ -398,8 +398,8 @@ input {outline: none;}
 .trk-img{display:none;}
 .trk-md-img{width:92%;margin:0 auto;}
 .compare-table h4{margin-bottom:20px;font-weight:600;font-size:18px;}
-.list-01 .qq{float:left;margin:4px 5px 0 0;line-height:26px;background:url("../img/qq.png") no-repeat;background-size:100%;width:156px;text-align:right;color:#fff;}
-.list-01 .qq span{margin-right:8px;}
+.list-01 .qq{margin:0;line-height:26px;background:url("../img/qq.png") no-repeat;background-size:124%;width:156px;float:left;color:#fff;height:26px;}
+.list-01 .qq span{margin-right:8px;height:12px;}
 #compare table{width:100%;overflow:hidden;}
 #compare td+td{border:1px solid #fff;}
 #compare td{padding:15px 10px;text-align:center;vertical-align:middle;color:#222;}
