修改按钮的hover颜色

--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -313,7 +313,7 @@ md-select .md-select-value,md-select.md-table-select > .md-select-value{
     height: 34px;
 }
 .cs-add-button:hover {
-  background: #2f9be1 !important;
+  background: #357cf3 !important;
 }
 .cs-input-label {
     line-height: 20px;
