--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -220,8 +220,7 @@ header .home:hover{
     font-weight: bold;
 }
 .cs-page-content {
-    background: #fff none repeat scroll 0 0;
-    padding: 0px 15px 15px;
+    margin: 0 15px 15px;
     position: relative;
 }
 .cs-report-summary {
@@ -289,7 +288,7 @@ header .home:hover{
     width:160px;
     height: 30px;
 }
-
+md-select.md-table-select{min-width:auto;}
 md-select .md-select-value,md-select.md-table-select > .md-select-value{
     padding: 0 5px;
     border:1px solid #c9c9cf !important;
@@ -313,7 +312,7 @@ md-select .md-select-value,md-select.md-table-select > .md-select-value{
     height: 34px;
 }
 .cs-add-button:hover {
-  background: #357cf3 !important;
+  background: #2f9be1 !important;
 }
 .cs-input-label {
     line-height: 20px;
@@ -547,7 +546,6 @@ md-datepicker {
     height: 32px;
     line-height: 32px;
     padding:0 10px;
-    border: medium none;
     border-radius:3px;
     margin-right:10px;
     border:1px solid #CAC9CF;
@@ -607,15 +605,16 @@ a.cs-inline-edit {
 
 /* for md-table */
 table.md-table{
-    overflow-x: auto;border:1px solid #ccc;border-left:none;
+    overflow-x: auto;border-bottom:none;
 }
+md-table-container table.md-table{border:none;}
 table.md-table.md-row-select td.md-cell:nth-child(n+3):nth-last-child(n+2),
 table.md-table.md-row-select th.md-column:nth-child(n+3):nth-last-child(n+2) {
     padding:0;
 }
 table.md-table:not(.md-row-select) td.md-cell:nth-child(n+2):nth-last-child(n+2),
 table.md-table:not(.md-row-select) th.md-column:nth-child(n+2):nth-last-child(n+2) {
-    padding: 0 12px;
+    padding:8px 15px 5px 12px;
 }
 table.md-table td.md-cell:last-child, table.md-table th.md-column:last-child{padding:0 0 0 12px;}
 table.md-table th.md-column md-icon{min-width:12px;min-height:12px;font-weight:600;margin:-2px 0 0 0 ;}
@@ -627,15 +626,12 @@ table.md-table th.md-column.md-active, table.md-table th.md-column.md-active md-
     background: -o-linear-gradient(top, #f8f8f8 0, #e9e9e9 100%);
     background: -ms-linear-gradient(top, #f8f8f8 0, #e9e9e9 100%);
     background: linear-gradient(to bottom, #f8f8f8 0, #e9e9e9 100%);
-    height:32px;
-    line-height:32px;
     color:#000;font-weight:bold;}
+.md-table tfoot.md-body{line-height:20px;}
 table.md-table th.md-column {
-    border-left:1px solid #d7d7d7;
+    border-right:1px solid #d7d7d7;
 }
-.md-table tfoot.md-body{
-    border-top:1px solid #d7d7d7;
- }
+
 table.md-table th.md-column.md-active, table.md-table th.md-column.md-active md-icon{color:#000;font-weight:800;}
 table.md-table thead.md-head > tr.md-row{
     height: auto;
@@ -644,6 +640,7 @@ table.md-table td.md-cell{
     border-bottom: 1px solid #eaeaea;
     border-top: none;font-size:12px;
 }
+table.md-table tbody{border-top:1px solid #ccc;}
 table.md-table tbody tr:hover {
   background: rgba(45, 168, 249, 0.06);
 }
@@ -653,13 +650,14 @@ table.md-table tbody.md-body > tr.md-row:hover, table.md-table tfoot.md-foot > t
 table tbody tr:nth-child(2n+2){background:#f5f5f5;border-width:1px 0 1px 0;border-color:#ededed;border-style:solid;}
 
 table{border-radius:3px 3px 0 0;float:left;width:100%;height:auto;}
-md-table-container {max-height:430px;overflow-y:auto;border-right:1px solid #d7d7d7;border-left:1px solid #d7d7d7;border-radius:0 0 3px 3px;}
+md-table-container {max-height:430px;overflow-y:auto;border-radius:0 0 3px 3px;float:left;}
+.table-box{border:1px solid #d7d7d7;border-radius:3px;}
 .md-table-pagination{color:#000;}
 .md-table-pagination .label {
     font-size: 12px;
     font-weight: normal;
     color:#333;
-    padding: 0;
+    padding: 0;margin-right:8px;
     text-shadow: unset;
 }
 /*Start Nav Style*/
@@ -1529,7 +1527,7 @@ h1.setting-title p{line-height:26px;color:#666;}
 .copy-btn.domain-btn:hover{
     background:#425fa5!important;
 }
-.copy-btn.domain-btn{border-radius:3px;}
+.copy-btn.domain-btn{border-radius:3px;  }
 
 .copy-btn.main-domain{
     padding: 0 15px;
@@ -2684,7 +2682,7 @@ input[type=password]:disabled, input[type=radio]:disabled, input[type=text]:disa
 .nav-col i.mtop2{margin:16px 5px 0 0;}
 
 .navbar-box{min-height:46px;height:46px;}
-.navbar-box a{line-height:41px;height:45px;margin-top:-1px;border-left:1px solid #d5d5d5;}
+.navbar-box a{line-height:41px;height:45px;margin-top:-1px;border-left:1px solid #d5d5d5;background:#fff;}
 .navbar-box a:hover{
     background: #f6f8f8;
     background: -moz-linear-gradient(top, #e9e9e9 0, #fff 100%);
@@ -2716,7 +2714,7 @@ input[type=password]:disabled, input[type=radio]:disabled, input[type=text]:disa
 md-content.md-default-theme, md-content{color:#000;}
 .md-toolbar-tools{padding:0 0 0 15px;}
 .md-toolbar-tools h1{margin:0;}
-.md-toolbar-tools img{width:142px;height:29px;margin-left:10px;}
+.md-toolbar-tools img{width:138px;height:29px;margin-left:10px;}
 .cs-action-bar-bg{background:#f1f2f7;border-bottom:1px solid #e8e8e8;margin:0 0 15px 0;padding:20px 15px;}
 .cs-action-bar-bg h6{padding:0;font-weight:bold;font-size:13px;color:#666;margin-top:0;}
 .cs-add-button{ box-shadow:0 1px 1px 0 rgba(0, 0, 0, 0.1),
@@ -2782,9 +2780,14 @@ md-select-menu.md-default-theme md-content md-option:not([disabled]):focus, md-s
 .md-button.md-raised:not([disabled]){box-shadow:0 0 0 0 rgba(0, 0, 0, 0);}
 .md-button{margin:0;}
 .traffic-source-table tbody tr:nth-child(2n+2){background:transparent;border:transparent;}
-md-menu-content.md-menu-bar-menu.md-dense{padding:0;max-height:auto;}
+md-menu-content.md-menu-bar-menu.md-dense{padding:0;max-height:400px;border-radius:3px;background:rgba(246, 248, 248, 0.97)!important;}
 md-menu-content.md-menu-bar-menu.md-dense .md-button{color:#000;}
+md-menu-content.md-menu-bar-menu.md-dense .md-button:hover{color:#fff;font-weight:bold;}
 md-menu-content.md-dense md-menu-item{min-height:32px;}
+md-menu-content .md-menu.md-open>.md-button{background:#8494a2;color:#fff;}
+md-menu-content .md-menu.md-open>.md-button span{color:#fff;}
+md-menu-content.md-default-theme .md-menu>.md-button:after, md-menu-content .md-menu>.md-button:after{color:#fff;}
+.md-button.md-default-theme:not([disabled]).md-focused, .md-button:not([disabled]).md-focused, .md-button.md-default-theme:not([disabled]):hover, .md-button:not([disabled]):hover{background:#8494a2;}
 .changeplan a{float:left;color:#000;padding:0 15px;font-size:12px;display: block;height:45px;line-height:45px;}
 .changeplan i{margin:14px 6px 0 0;width:16px;height:16px;display: inline-block;float:left;}
 
